fix contrast colours on return home button on 404.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,14 +752,14 @@ input:hover {
     text-align: center;
     left: 5vw;
     width: 20vw;
-    background-color: #b3d0d9;
+    background-color: #3b197a;
     border-radius: 1vw;
-    color: rgb(107, 107, 184);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 .return-home:hover {
-    background-color: rgb(107, 107, 184);
-    color: #D9E8EE;
+    background-color: rgb(255, 255, 255);
+    color: #3b197a;
     text-decoration: none;
 }
